# middleware/validate.js
@@ -1,26 +1,36 @@
-const validator = require('../helpers/validate');
+const Validator = require('validatorjs');
 
-const saveContact = (req, res, next) => {
-  const validationRule = {
-    firstName: 'required|string',
-    lastName: 'required|string',
-    email: 'required|email',
-    favoriteColor: 'required|string',
-    birthday: 'string'
-  };
-  validator(req.body, validationRule, {}, (err, status) => {
-    if (!status) {
-      res.status(412).send({
-        success: false,
-        message: 'Validation failed',
-        data: err
-      });
-    } else {
-      next();
-    }
-  });
+const bookRules = {
+  title: 'required|string|min:2',
+  author: 'required|string|min:2',
+  genre: 'string',
+  publicationDate: 'date',
+  isbn: 'string|min:10|max:13',
+  rating: 'numeric|min:0|max:5',
+  summary: 'string|min:5'
 };
 
+const reviewRules = {
+  bookId: 'required|string', 
+  reviewText: 'required|string|min:5', 
+  rating: 'required|numeric|min:0|max:5', 
+  createdAt: 'date'                     
+};
+
+function validate(rules) {
+  return (req, res, next) => {
+    const validation = new Validator(req.body, rules);
+
+    if (validation.fails()) {
+      return res.status(400).json({
+        errors: validation.errors.all()
+      });
+    }
+    next();
+  };
+}
+
 module.exports = {
-  saveContact
+  saveBook: validate(bookRules),
+  saveReview: validate(reviewRules)
 };
