# routes/index.js
@@ -1,12 +1,19 @@
 const router = require('express').Router();
 
-router.use('/', require('./swagger.js'))
+router.use('/',  
+    //#swagger.tags=['Default']
+    require('./swagger.js'));
 
-router.get('/', (req, res) => {
-    //#swagger.tags=['Hello World']
-    res.send('Hello World')
-});
+router.get('/', 
+    //#swagger.tags=['Default']
+    (req, res) => {res.send('Hi there, use the /api-docs route')});
 
-router.use('/contacts', require('./contacts'))
+router.use('/books', 
+    //#swagger.tags=['Books']
+    require('./books.js'));
+
+router.use('/reviews', 
+    //#swagger.tags=['Reviews']
+    require('./reviews.js'));
 
 module.exports = router; 
